--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: #path to picture
 show_download: false
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jeky11-remote-theme
+- jekyll-remote-theme # add this line to the plugins list if you already have one
