--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ remote_theme: pages-themes/minimal@v0.2.0
 toc: true
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+# Link custom styles
+include: ["assets/css/style.css"]
