--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Coffee Shop Sales Analysis
+title: Massachusetts General Hospital: Patient Encounter & Cost Analysis Report
 logo: #path to picture 
 show_download: false
 remote_theme: pages-themes/minimal@v0.2.0
