--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Coffee Shop Sales Analysis
-logo: #path to picture 
+logo: images.jpg
 show_download: false
 remote_theme: pages-themes/minimal@v0.2.0
 
